@@ -3,15 +3,25 @@ Date
 ====
 
 All necessary components are set up in the testclass to make sure that
-we test the real configuration. Let's test the Widget:
+we test the real configuration. Let's render the widgets in different
+modes and try to extract the value form an request.
 
   >>> import datetime
   >>> import z3c.form
   >>> import zope.schema
-  
+
   >>> field = zope.schema.Date(default=datetime.date(2007, 4, 1))
   >>> widget = self.setupWidget(field)
   >>> widget.update()
+  >>> widget.extract() is z3c.form.interfaces.NOVALUE
+  True
+
+
+INPUT_MODE
+----------
+
+  >>> widget.mode == z3c.form.interfaces.INPUT_MODE
+  True
   >>> print widget.render()
   <input type="text" id="foo-day" name="bar-day"
          class="date-widget required date-field" size="2"
@@ -36,14 +46,40 @@ we test the real configuration. Let's test the Widget:
          accesskey="" size="4" maxlength="4" value="2007" />
   <input name="bar-empty-marker" type="hidden" value="1" />
 
+  >>> widget.request = self.testrequest(
+  ...     form={'bar-day': '1',
+  ...           'bar-month': '4',
+  ...           'bar-year': '2007',
+  ...           'bar-empty-marker': '1'}
+  ...     )
+  >>> widget.extract()
+  ('2007', '4', '1')
+
+
+DISPLAY_MODE
+------------
+
   >>> widget.mode = z3c.form.interfaces.DISPLAY_MODE
   >>> print widget.render()
   <span id="foo" class="date-widget required date-field">4/1/07</span>
+
+
+HIDDEN_MODE
+-----------
 
   >>> widget.mode = z3c.form.interfaces.HIDDEN_MODE
   >>> print widget.render()
   <input type="hidden" id="foo" name="bar"
            class="hidden-widget" value="4/1/07" />
+  >>> widget.request = self.testrequest(
+  ...     form={'bar': '4/1/07'}
+  ...     )
+  >>> widget.extract()
+  ('2007', '4', '1')
+
+
+INPUT_MODE and show_today_link
+------------------------------
 
 now lets enable show_today_link option to provide plain javascript for
 inserting current date into the fields.
@@ -84,9 +120,13 @@ inserting current date into the fields.
                   }</script>
   <BLANKLINE>
 
+
+Translations
+------------
+
 check if translations are working
 
-  >>> widget = self.setupWidget(field, 'sl')
+  >>> widget = self.setupWidget(field, lang='sl')
   >>> widget.update()
   >>> widget.show_today_link = True
   >>> print widget.render()
