@@ -4,6 +4,7 @@ Changelog
 0.1a10 (svn/unreleased)
 -----------------------
 
+ * extract values in HIDDEN_MODE and add test for extract() [csenger]
  * fix handling of AM/PM in DateTimeWidget and add test [csenger]
 
 0.1a9 (2009-09-07)
